<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HelloMain" >

    <EditText
        android:id="@+id/thetext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/Hinttext" />
    
    <Button
        android:id="@+id/Gauthor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/thetext"
        android:text="@string/Getauthor" />

    <Button
        android:id="@+id/Gid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Gauthor"
        android:layout_below="@+id/Gauthor"
        android:text="@string/Getid" />

    <Button
        android:id="@+id/Gtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/Gauthor"
        android:layout_below="@+id/Gid"
        android:text="@string/Gettitle" />

    <Button
        android:id="@+id/Gtext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/Gauthor"
        android:layout_below="@+id/Gtitle"
        android:text="@string/Gettext" />

    <Button
        android:id="@+id/Sauthor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/Gauthor"
        android:layout_below="@id/Gtext"
        android:text="@string/Setauthor" />

	<Button
        android:id="@+id/Sid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/Gauthor"
        android:layout_below="@id/Sauthor"
        android:text="@string/Setid" />
    
    <Button
        android:id="@+id/Stitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/Gauthor"
        android:layout_below="@id/Sid"
        android:text="@string/Settitle" />

    <Button
        android:id="@+id/Stext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/Gauthor"
        android:layout_below="@+id/Stitle"
        android:text="@string/Settext" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/label_text" />

</RelativeLayout>